sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:17: error: '=' expected but identifier found.
def getCouleurIndice(a:Int)Int = {
                           ^SelectBaseball:23: error: illegal start of simple expression
def eval(a:Int):Int = {
^SelectBaseball:43: error: '=' expected but '(' found.
def index2pos(index:Int):Array[Int](2) = {
                                   ^SelectBaseball:49: error: illegal start of simple expression
def pos2index(pos:Array[Int](2)):Int = {
^SelectBaseball:49: error: ')' expected but '(' found.
def pos2index(pos:Array[Int](2)):Int = {
                            ^SelectBaseball:49: error: '=' expected but ')' found.
def pos2index(pos:Array[Int](2)):Int = {
                               ^SelectBaseball:181: error: illegal start of simple expression
}
^